remove unnecesary dtos
