# src/main/java/org/barbershop/customer/adapter/in/rest/CustomerResponseDTO.java
@@ -1,20 +1,0 @@
-package org.barbershop.customer.adapter.in.rest;
-
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-import java.time.OffsetDateTime;
-
-@Getter
-@Setter
-@NoArgsConstructor
-@AllArgsConstructor
-public class CustomerResponseDTO {
-    private Long id;
-    private String name;
-    private String phone;
-    private String email;
-    private String address;
-    private OffsetDateTime createdAt;
-}
